# UltimateBooster

./: .gitignore  .gitmodules  aa_cmake.bat
Plugin/: CMakeLists.txt  vcpkg.json
Plugin/src/: Config.cpp  Config.h  Event.cpp  Event.h  PCH.h  SpeedManager.cpp  SpeedManager.h  Utility.cpp  Utility.h  main.cpp
